--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,6 +102,7 @@ dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:31.0.2')
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+    implementation "com.google.firebase:firebase-auth-ktx"
     implementation 'com.google.firebase:firebase-firestore-ktx'
 
     implementation 'com.github.bumptech.glide:glide:4.14.2'
